hard-gists/09648344984565f9477a/run.log
=== Docker Run Log for 09648344984565f9477a ===
Started at: Mi 29. Okt 11:30:44 CET 2025

[2025-10-29 11:30:45] START: Running container for 09648344984565f9477a
[2025-10-29 11:30:45] SUCCESS: Container 24f8643b2426db1c28a821e29a2a8156aeaa9124d703d7cad73dbb6f82764328 started for 09648344984565f9477a
=== Container logs for 09648344984565f9477a ===
  File "/snippet.py", line 120
    print "violation:", v / violation_init
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 09648344984565f9477a ===
[2025-10-29 11:30:47] INFO: Container 24f8643b2426db1c28a821e29a2a8156aeaa9124d703d7cad73dbb6f82764328 has stopped
